Fix submit button spacing on mobile

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -259,3 +259,7 @@
     opacity: 1;
   }
 }
+
+.contact-form-submit-wapper {
+  margin: 1.5rem 0 5rem 0;
+}
